Position of loading screen is now fixed to block scrolling while it is visible

--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -1,7 +1,7 @@
 .loading-screen {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 3;
@@ -53,5 +53,6 @@
   100% {
     opacity: 0;
     z-index: -1;
+    display: none;
   }
 }
